--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - "3.4"
 install: pip install -r requirements.txt
+script: py.test
 deploy:
   provider: pypi
   user: milliams
